--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,23 @@
-# plaintext
-out
-
-# typescript
-lib
-
-# npm
+.DS_Store
 node_modules
+/dist
 
-# 0x
-*.0x/
 
-# emacs
-*~
-*#*
-.#*
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
