--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vueIndentScriptAndStyle": true
   },
   "dependencies": {
+    "@xieyuheng/cicada": "0.0.6",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.0.2",
