--- a/package.json
+++ b/package.json
@@ -13,17 +13,15 @@
     "vueIndentScriptAndStyle": true
   },
   "dependencies": {
-    "@xieyuheng/cicada": "0.0.12",
+    "@xieyuheng/cicada": "0.0.13",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.0.2",
-    "vue-router": "^3.4.7",
-    "vuex": "^3.5.1"
+    "vue-router": "^3.4.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.5.8",
     "@vue/cli-plugin-typescript": "~4.5.8",
-    "@vue/cli-plugin-vuex": "~4.5.8",
     "@vue/cli-service": "~4.5.8",
     "prettier": "^2.1.2",
     "typescript": "~4.0.3",
