--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vue/cli-plugin-typescript": "~4.5.8",
     "@vue/cli-service": "~4.5.8",
     "prettier": "^2.1.2",
+    "raw-loader": "^4.0.2",
     "typescript": "~4.0.3",
     "vue-template-compiler": "^2.6.12"
   }
