--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^3.4.7"
   },
   "devDependencies": {
+    "@vercel/node": "^1.8.4",
     "@vue/cli-plugin-router": "~4.5.8",
     "@vue/cli-plugin-typescript": "~4.5.8",
     "@vue/cli-service": "~4.5.8",
