--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "format": "npx prettier src --write"
+    "format": "npx prettier src api db services --write"
   },
   "prettier": {
     "semi": false,
