--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cicada-playground",
+  "name": "@cicada-lang/cicada-playground",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -13,7 +13,7 @@
     "vueIndentScriptAndStyle": true
   },
   "dependencies": {
-    "@xieyuheng/cicada": "0.0.17",
+    "@cicada-lang/cicada": "0.0.17",
     "ace-builds": "^1.4.12",
     "file-loader": "^6.1.1",
     "mongodb": "^3.6.2",
