--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@cicada-lang/cicada": "0.0.17",
+    "@exodus/schemasafe": "^1.0.0-rc.3",
     "ace-builds": "^1.4.12",
     "file-loader": "^6.1.1",
     "mongodb": "^3.6.2",
