--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@cicada-lang/cicada": "0.0.17",
     "@exodus/schemasafe": "^1.0.0-rc.3",
     "ace-builds": "^1.4.12",
+    "fast-deep-equal": "^3.1.3",
     "file-loader": "^6.1.1",
     "mongodb": "^3.6.2",
     "vue": "^2.6.12",
