--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-router": "^3.4.7"
   },
   "devDependencies": {
+    "@types/assert": "^1.5.2",
     "@vercel/node": "^1.8.4",
     "@vue/cli-plugin-router": "~4.5.8",
     "@vue/cli-plugin-typescript": "~4.5.8",
