--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "fast-deep-equal": "^3.1.3",
     "file-loader": "^6.1.1",
     "mongodb": "^3.6.2",
+    "pino": "^6.7.0",
+    "pino-pretty": "^4.3.0",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.0.2",
