- [web] use `web/` instead of `src/`
这个很好笑：https://github.com/vuejs/vue-cli/issues/1134#issuecomment-384856754
火了之后，这点小需求都不给满足。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,10 @@
     "baseUrl": ".",
     "types": ["webpack-env"],
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["web/*"]
     },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
-  "include": ["src/**/*.ts", "src/**/*.vue", "tests/**/*.ts"],
+  "include": ["web/**/*.ts", "web/**/*.vue", "tests/**/*.ts"],
   "exclude": ["node_modules"]
 }
