--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "format": "prettier src api server --write"
+    "format": "prettier web api server --write"
   },
   "prettier": {
     "semi": false,
