--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@cicada-lang/cicada": "^0.0.19",
     "@exodus/schemasafe": "^1.0.0-rc.3",
+    "@forchange/cleword-yaml": "^0.2.18",
     "ace-builds": "^1.4.12",
     "fast-deep-equal": "^3.1.3",
     "file-loader": "^6.2.0",
