--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,15 +8,19 @@
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
     "types": ["webpack-env"],
-    "paths": {
-      "@/*": ["web/*"]
-    },
+    "paths": { "@/*": ["web/*"] },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
-  "include": ["web/**/*.ts", "web/**/*.vue", "tests/**/*.ts"],
+  "include": [
+    "web/**/*.ts",
+    "web/**/*.vue",
+    "tests/**/*.ts",
+    "schema/**/*.json"
+  ],
   "exclude": ["node_modules"]
 }
