--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,19 +8,15 @@
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
     "types": ["webpack-env"],
-    "paths": { "@/*": ["web/*"] },
+    "paths": {
+      "@/*": ["web/*"]
+    },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
-  "include": [
-    "web/**/*.ts",
-    "web/**/*.vue",
-    "tests/**/*.ts",
-    "schema/**/*.json"
-  ],
+  "include": ["web/**/*.ts", "web/**/*.vue", "tests/**/*.ts"],
   "exclude": ["node_modules"]
 }
